Potential fix for the unwanted horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -187,7 +187,6 @@
 }
 .hero-title {
 	font-size: 76px;
-	width: 100%;
 	color: var(--primary-text-color);
 	line-height: 80px;
 	margin-top: -32px;
